--- a/public/vote-page/stylesheets/vote-page.css
+++ b/public/vote-page/stylesheets/vote-page.css
@@ -55,9 +55,34 @@ button:hover {
   margin: 0px 30px 0px 0px;
 }
 
+.btn-login {
+  background-color: #c80000;
+}
+
 .live-update-feedback {
   margin: 0px auto 10px 20px;
 }
+
+.poll-question, .deadline {
+  text-align: center;
+  margin: 20px auto;
+
+}
+
+.poll-question {
+  color: #e2e2e2;
+  font-size: 2em;
+}
+
+.deadline {
+  margin: 0px auto 20px auto;
+  text-align: center;
+}
+
+.options {
+
+}
+
 
 .poll-option-button {
   /*margin: 15px auto;*/
