--- a/public/vote-page/stylesheets/vote-page.css
+++ b/public/vote-page/stylesheets/vote-page.css
@@ -116,7 +116,8 @@ img.user-profile-img {
 }
 
 .deadline-container {
-  margin-bottom: 20px;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 
 @media (max-width: 620px) {
